Nicely responsive across all viewports, attempt to resolve video not playing on iphone

--- a/src/App.css
+++ b/src/App.css
@@ -25,17 +25,25 @@ h2,
 h3 {
   width: fit-content;
   margin-top: 13px;
-  margin-left: 60px;
+  margin-left: 75px;
 }
 
 h5 {
   text-align: center;
 }
 
+#email-icon {
+  /* z-index: 2; */
+}
+
+/* div p {
+  z-index: 3;
+} */
+
 #bg-img,
 #bg-img-2 {
   height: 100vh;
-  width: 25vw;
+  width: 31vw;
   object-fit: contain;
   position: fixed;
   /* right: 0; */
@@ -45,7 +53,7 @@ h5 {
 
 #bg-img {
   object-fit: cover;
-  width: 35vw;
+  width: 35%;
   left: 0;
 }
 
@@ -54,7 +62,7 @@ h5 {
 }
 
 .header {
-  height: 140px;
+  height: 175px;
 }
 
 .title {
@@ -67,7 +75,7 @@ h5 {
 .title,
 .profession,
 #projects-title {
-  padding: 5px;
+  padding: 6px;
 }
 
 .title,
@@ -82,35 +90,35 @@ h5 {
 }
 
 .social-email {
-  margin: 5px 5px 5px 12px;
+  margin: 6px 6px 6px 15px;
   position: fixed;
   top: 0;
   left: 0;
 }
 
 .social-email li {
-  margin-top: 5px;
+  margin-top: 6px;
 }
 
 .email {
-  position: relative;
-  padding: 7px;
-  margin: 10px;
-  font-size: 15px;
+  position: fixed;
+  padding: 9px;
+  margin: 16px 13px;
+  font-size: 19px;
   background-color: red;
   color: white;
-  letter-spacing: 3px;
+  letter-spacing: 4px;
   overflow: hidden;
 }
 .email:after {
   content: '';
   position: absolute;
-  margin: -20px;
-  width: 500px;
-  height: 40px;
+  margin: -25px;
+  width: 625px;
+  height: 50px;
   transform: rotate(45deg);
   background-color: #000;
-  box-shadow: 0 0 0 250px #522d5b;
+  box-shadow: 0 0 0 313px #522d5b;
   filter: opacity(50%);
 }
 
@@ -118,27 +126,29 @@ h5 {
   position: fixed;
   top: 0;
   right: 0;
-  width: 90px;
+  width: 113px;
 }
 
 #photo-matt {
-  padding: 5px;
+  margin-top: 8px;
+  /* padding: 2px; */
+  /* border: 2px solid #aaaaaa; */
   object-fit: cover;
-  height: 100px;
+  height: 125px;
   /* width: 80px; */
-  margin: 5px 2px 5px 5px;
+  /* margin: 5px 2px 6px 6px; */
   /* border-radius: 10px 10px 10px 30px; */
-  box-shadow: 10px 10px 5px #aaaaaa;
+  box-shadow: 5px 10px 6px #aaaaaa;
   /* filter: invert(100%); */
 }
 
 #photo-matt-inv {
-  padding: 5px;
+  padding: 6px;
   object-fit: contain;
-  height: 100px;
-  width: 80px;
-  margin: 5px;
-  border-radius: 40px 10px 10px 30px;
+  height: 125px;
+  width: 100px;
+  margin: 6px;
+  border-radius: 50px 13px 13px 38px;
   position: absolute;
   top: 0;
   right: 0;
@@ -161,15 +171,36 @@ h5 {
 
 .projects-title-container {
   width: fit-content;
-  font-size: 30px;
+  font-size: 38px;
 }
 
 #projects-title {
 }
 
+@media only screen and (max-width: 1900px) {
+  #bg-img {
+    /* width: 30vw; */
+  }
+}
+
+@media only screen and (max-width: 1700px) {
+  #bg-img {
+    width: 80%;
+  }
+}
+
+@media only screen and (max-width: 1300px) {
+  #bg-img {
+    width: 90%;
+  }
+}
+
 @media only screen and (max-width: 900px) {
   .projects-container {
     grid-template-columns: 1fr 1fr;
+  }
+  #bg-img {
+    width: 120%;
   }
 }
 
@@ -183,15 +214,15 @@ h5 {
   }
   #photo-matt,
   #photo-matt-inv {
-    height: 100px;
-    width: 80px;
+    height: 125px;
+    width: 100px;
   }
 }
 
 .project-container {
-  margin-top: 20px;
+  margin-top: 25px;
   width: fit-content;
-  box-shadow: 2px 10px 5px #aaaaaa;
+  box-shadow: 2px 13px 6px #aaaaaa;
 }
 
 #that-french-artist {
@@ -199,14 +230,14 @@ h5 {
 
 #projects-title,
 #project-title {
-  margin: 10px;
+  margin: 13px;
 }
 
 .project-title-container {
   width: fit-content;
   /* border-style: dashed;
   border-width: 1px 0px 0px 0px; */
-  padding-top: 5px;
+  padding-top: 6px;
 }
 
 #project-title {
@@ -219,33 +250,33 @@ h5 {
 
 .project-details-popup {
   position: absolute;
-  margin: 10px 0px 0px 20px;
+  margin: 13px 0px 0px 25px;
   background-color: red;
-  width: 250px;
+  width: 313px;
 }
 
 .project-details-popup:after {
   content: '';
   position: absolute;
   /* margin: -40px; */
-  width: 200px;
-  height: 40px;
+  width: 225px;
+  height: 50px;
   transform: rotate(10deg);
   background-color: red;
-  box-shadow: 0 0 0 250px #522d5b;
+  box-shadow: 0 0 0 313px #522d5b;
   filter: opacity(10%);
 }
 
 .project-details-popup p {
-  padding: 5px;
+  padding: 6px;
   font-size: 15px;
   color: white;
 }
 
 .video-container {
   display: grid;
-  grid-template-columns: 250px 110px;
-  padding: 10px 0px 0px 20px;
+  grid-template-columns: 313px 138px;
+  padding: 13px 0px 0px 25px;
   overflow: hidden;
 }
 
@@ -258,10 +289,10 @@ h5 {
 }
 
 video {
-  width: 250px;
-  height: 350px;
+  width: 313px;
+  height: 438px;
   object-fit: cover;
-  /* border-style: dashed; */
+  /* z-index: 1; */
 }
 
 .sections-container {
@@ -269,7 +300,7 @@ video {
   /* gap: 5px; */
   grid-auto-rows: 1fr 1fr;
   height: 90%;
-  margin: 10px;
+  margin: 13px;
 }
 
 .video-container a {
@@ -278,7 +309,7 @@ video {
 
 .repo-links-container {
   display: grid;
-  grid-auto-rows: 140px 1fr;
+  grid-auto-rows: 175px 1fr;
   row-gap: 0;
 }
 
@@ -290,12 +321,17 @@ video {
 }
 
 .repo-link {
-  margin-bottom: 10px;
-  font-size: 15px;
+  margin-bottom: 13px;
+  font-size: 19px;
 }
 
 .repo-links a {
-  margin-bottom: 5px;
+  margin-bottom: 6px;
+}
+
+.repo-link a img {
+  /* filter: invert(100%); */
+  border-radius: 50%;
 }
 
 .repo-links-under {
@@ -305,10 +341,14 @@ video {
 
 .skills-list-container {
   background-color: white;
+  margin-top: 13px;
+}
+
+#skills-icon {
   margin-top: 10px;
 }
 
 .skill-icon {
-  height: 40px;
+  height: 50px;
   filter: grayscale(100%);
 }
